--- a/views/login.html
+++ b/views/login.html
@@ -5,19 +5,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
 		<link rel="stylesheet" type="text/css" href="style.css"> 
+		<!--<meta name="viewport" content="width=device-width, initial-scale=1"> -->
+		
 		<title>Login</title>
 		<style>
+		
 		.login-form {
-			width: 300px;
-			margin: 0 auto;
-			font-family: Tahoma, Geneva, sans-serif;
+    		width: 400px;
+    		margin: 0 auto;
+    		font-family: Tahoma, Geneva, sans-serif;
 		}
-		.login-form h1 {
-			text-align: center;
-			color: #4d4d4d;
-			font-size: 24px;
-			padding: 20px 0 20px 0;
-		}
+
 		.login-form input[type="password"],
 		.login-form input[type="text"] {
 			width: 100%;
@@ -28,12 +26,12 @@
 		}
 		.login-form input[type="submit"] {
 			width: 100%;
-			padding: 15px;
-			background-color: #535b63;
-			border: 0;
+			padding: 10px;
+			background-color: limegreen;
+			border: 0;	
 			box-sizing: border-box;
 			cursor: pointer;
-			font-weight: bold;
+			
 			color: #ffffff;
 		}
 		</style>
@@ -43,18 +41,20 @@
 
 			<ul class="navbar-nav">
 				  <li class="nav-item">
-					<a class="nav-link" href='welcome.php'>Register</a>
+					<a class="nav-link" href='register.html'>Register</a>
 				  </li>
 			</ul>
 		
 		</nav>
 		<section class="jumbotron">
 		<div class="login-form">
+			
 			<h1>Login</h1>
 			<form action="login" method="POST">
 				<input type="text" name="username" placeholder="Username" required>
 				<input type="password" name="password" placeholder="Password" required>
 				<input type="submit">
+			
 			</form>
 		</div>
 		</section>
