adding more functionality to disease modeling

--- a/views/htmlTable.html
+++ b/views/htmlTable.html
@@ -119,6 +119,10 @@ By default, table headings are bold and centered. A table data/cell is defined w
     {
       x[i].style.backgroundColor = "blue";//vacinated
     }
+    else if(infection > 15 && infection < 20)
+    {
+      x[i].style.backgroundColor = "green";//recovered
+    }
     else
     {
       x[i].style.backgroundColor = "yellow";//suceptible
