--- a/views/homepage.html
+++ b/views/homepage.html
@@ -23,6 +23,7 @@
         <link href='https://css.gg/push-chevron-up.css' rel='stylesheet'>
         <link href='https://css.gg/chevron-double-down-o.css' rel='stylesheet'>
         <link href='https://css.gg/arrow-right-o.css' rel='stylesheet'>
+        <meta name="viewport" contents="width=device-width">
 
         <div id="banner">
             <div id="title">Project Outbreak</div>
