--- a/css/homepageStyle.css
+++ b/css/homepageStyle.css
@@ -1,126 +1,246 @@
-section {
-  opacity: 0;
-  transform: translate(0, 20px);
-  transition: all 1s;
-}
-section.visible {
-  opacity: 1;
-  transform: translate(0, 0);
-}
 body {
-  font-family: "Times New Roman", Times, serif;
+	font-family: "Times New Roman", Times, serif;
+	overflow-x: hidden;
 }
+a,
 a {
-  text-decoration: none;
+	text-decoration: none;
+}
+a.read-more {
+	position: relative;
+	float: center;
+	font-family: 'Roboto', sans-serif;
+	font-size: 11px;
+	text-transform: uppercase;
+	letter-spacing: 1.5px;
+	background-color: #1f2020;
+	border: 1px solid #333333;
+	border-radius: 3px 3px 3px 3px;
+	color: #f5f5f5;
+	padding: 5px;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	outline: none;
+}
+a.read-more:hover {
+	background-color: #313333;
+	border-radius: 3px 3px 3px 3px;
+	text-decoration: none;
+	box-shadow: 0px 15px 20px rgba(107, 104, 104, 0.4);
+	color: #fff;
+	transform: translateY(-7px);
 }
 a:hover {
-  color: grey;
-  text-decoration: underline;
+	color: grey;
+	text-decoration: underline;
 }
 p a {
-  color: rgba(66, 73, 73, 0.6);
+	color: rgba(66, 73, 73, 0.6);
 }
+
 #banner {
-  background-color: rgb(19, 19, 19);
-  color: white;
-  width: 100%;
-  height: 160px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  align-content: center;
-  flex-direction: column;
-  background-image: url('../images/virus-banner.jpg');
-  background-size: 100% 300%;
+	background-color: rgb(19, 19, 19);
+	color: white;
+	width: 100%;
+	height: 160px;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	align-content: center;
+	flex-direction: column;
+	background-image: url('../images/virus-banner.jpg');
+	background-size: 100% 300%;
 }
 @media (max-width: 1500px) {
-  #banner {
-    background-size: 1500px 300%;
-  }
+	#banner {
+		background-size: 1500px 300%;
+	}
 }
 #title {
-  font-size: 60px;
-  font-weight: 700;
-  padding-top: 15px;
+	font-size: 60px;
+	font-weight: 700;
+	padding-top: 15px;
 }
 #title-names {
-  font-size: 18px;
-  color: lightgrey;
+	font-size: 18px;
+	color: lightgrey;
 }
 .shortcut {
-  border-radius: 10px;
-  background-color: rgb(19, 19, 19);
-  color: lightgrey;
-  padding: 7px;
-  padding-right: 10px;
-  right: 10px;
-  display: block;
-  font-size: 18px;
+	border-radius: 10px;
+	background-color: rgb(19, 19, 19);
+	color: lightgrey;
+	padding: 7px;
+	padding-right: 10px;
+	right: 10px;
+	display: block;
+	font-size: 18px;
 }
 .shortcut-icon {
-  display: block;
-  float: right;
-  position: relative;
-  left: 5px;
+	display: block;
+	float: right;
+	position: relative;
+	left: 5px;
 }
 #simulator-shortcut {
-  position: fixed;
+	position: fixed;
+	font-family: 'Roboto', sans-serif;
+	font-size: 11px;
+	text-transform: uppercase;
+	letter-spacing: 1.5px;
+	background-color: #1f2020;
+	border: 1px solid #333333;
+	border-radius: 3px 3px 3px 3px;
+	color: #f5f5f5;
+	padding: 5px;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	outline: none;
+}
+#simulator-shortcut:hover {
+	background-color: #313333;
+	border-radius: 3px 3px 3px 3px;
+	text-decoration: none;
+	box-shadow: 0px 15px 20px rgba(107, 104, 104, 0.4);
+	color: #fff;
+	transform: translateY(-7px);
 }
 #top-shortcut {
-  position: relative;
-  float: right;
-  top: 37px;
+	position: relative;
+	float: right;
+	top: 37px;
+	font-family: 'Roboto', sans-serif;
+	font-size: 11px;
+	text-transform: uppercase;
+	letter-spacing: 1.5px;
+	background-color: #1f2020;
+	border: 1px solid #333333;
+	border-radius: 3px 3px 3px 3px;
+	color: #f5f5f5;
+	padding: 5px;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	outline: none;
+}
+#top-shortcut:hover {
+	background-color: #313333;
+	border-radius: 3px 3px 3px 3px;
+	text-decoration: none;
+	box-shadow: 0px 15px 20px rgba(107, 104, 104, 0.4);
+	color: #fff;
+	transform: translateY(-7px);
 }
 #disease-header {
-  color: rgba(0, 0, 0, 0.95);
-  font-size: 24px;
-  font-weight: 300;
+	position: relative;
+	animation: disease-header 2s;
+	animation-timing-function: ease;
+	animation-fill-mode: forwards;
+	font-family: 'Bitter', serif;
+	line-height: 54px;
+	margin: 0 0 54px;
+	color: rgba(0, 0, 0, 0.95);
+	font-size: 36px;
+	font-weight: normal;
 }
-#disease-names {
-  font-size: 20px;
-  font-weight: 300;
+#covid {
+	position: relative;
+	animation: covid-19 2s;
+	animation-timing-function: ease;
+	animation-fill-mode: forwards;
+	font-size: 20px;
+	font-weight: 300;
+}
+#bubonic-plague {
+	position: relative;
+	text-align: center;
+	font-size: 20px;
+	font-weight: 300;
 }
 #disease-text {
-  color: #313333;
-  margin-left: 50px;
-  margin-right: 135px;
-  text-align: center;
-  font-size: 18px;
-  font-weight: 300;
+	color: #313333;
+	margin-left: 75px;
+	margin-right: 100px;
+	text-align: center;
+	font-size: 18px;
+	font-weight: 300;
 }
 #screenshot {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  padding-top: 40px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+	padding-top: 40px;
 }
 #btn {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  line-height: 15px;
-  font-size: 18px;
-  padding: 8px;
-  padding-top: 3px;
-  padding-bottom: 10px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	line-height: 15px;
+	font-size: 18px;
+	padding: 8px;
+	padding-top: 2px;
+	padding-bottom: 12px;
+	font-family: 'Roboto', sans-serif;
+	font-size: 11px;
+	text-transform: uppercase;
+	letter-spacing: 1.5px;
+	background-color: #1f2020;
+	border: 1px solid #333333;
+	border-radius: 3px 3px 3px 3px;
+	color: #f5f5f5;
+	padding: 5px;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	outline: none;
+}
+#btn:hover {
+	background-color: #313333;
+	border-radius: 3px 3px 3px 3px;
+	text-decoration: none;
+	box-shadow: 0px 15px 20px rgba(107, 104, 104, 0.4);
+	color: #fff;
+	transform: translateY(-7px);
 }
 #btn-icon {
-  display: inline-block;
-  position: relative;
-  top: 5px;
-  left: 5px;
+	display: inline-block;
+	position: relative;
+	top: 5px;
+	left: 5px;
 }
 #footer-banner {
-  background-color: rgb(19, 19, 19);
-  color: white;
-  width: 100%;
-  height: 75px;
-  flex-direction: column;
-  margin-top: 75px;
+	background-color: rgb(19, 19, 19);
+	color: white;
+	width: 100%;
+	height: 75px;
+	flex-direction: column;
+	margin-top: 75px;
 }
 #sources {
-  padding: 5px;
-  color: lightgrey;
+	padding: 5px;
+	color: lightgrey;
+}
+
+@keyframes covid-19 {
+	from {
+		left: 10px;
+		opacity: 0;
+	}
+	to {
+		left: 425px;
+		opacity: 1;
+	}
+}
+@keyframes disease-header {
+	from {
+		left: 10px;
+		opacity: 0;
+	}
+	to {
+		left: 441px;
+		opacity: 1;
+	}
 }
