--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,29 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="fadein.js">      
-    $(document).on("scroll", function () {
-    var pageTop = $(document).scrollTop()
-    var pageBottom = pageTop + $(window).height()
-    var tags = $("section")
-    
-    for (var i = 0; i < tags.length; i++) { 
-    var tag=tags[i] 
-
-    if ($(tag).position().top < pageBottom) {
-    $(tag).addClass("visible") 
-    }   else { 
-        $(tag).removeClass("visible") 
-    } 
-    } 
-    })
-    </script>
     <head>
         <link href='../css/homepagestyle.css' rel='stylesheet'>
         <link href='https://css.gg/push-chevron-up.css' rel='stylesheet'>
         <link href='https://css.gg/chevron-double-down-o.css' rel='stylesheet'>
         <link href='https://css.gg/arrow-right-o.css' rel='stylesheet'>
         <meta name="viewport" contents="width=device-width">
+        <script scr='sdtest.js'></script>
 
         <div id="banner">
             <div id="title">Project Outbreak</div>
@@ -36,11 +19,10 @@
         <div id="disease-header">
             <h2>Diseases Simulated</h2>
         </div>
-        <ul>
-           <div id="disease-names">
-               <li><h3>Orthocoronavirinae <em><span>&#40;</span>COVID-19 or Coronavirus<span>&#41;</span></em></h3></li>
-               <img id ="coronaPic" src="../images/coronavirus.jpg" width="1200" height="350" alt="micro scale picture of corona virus">
-            </div>
+           <div id="covid">
+               <h3>Orthocoronavirinae <em><span>&#40;</span>COVID-19 or Coronavirus<span>&#41;</span></em></h3>
+               </div>
+            <img id ="coronaPic" src="../images/coronavirus.jpg" width="100%" height="350" alt="micro scale picture of corona virus">
                <div id="disease-text">
                 
                    <p>A 55-year-old individual from Hubei province in China may have been the first person to have contracted COVID-19, the
@@ -53,12 +35,13 @@
                     conditions like heart or lung disease or diabetes seem to be at higher risk for developing more serious complications
                     from COVID-19 illness. Some symptoms of Orthocoronavirinae are fever or chills, cough, shortness of breath, fatigue, muscle or body aches, 
                     new loss of taste or smell, nausea or vomiting, and diarrhea.</p>
-                    <p> Add more...</p>
+                    <a class = "read-more" href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">Read more...</a>
                 </div>
-            <div id ="disease-names">
-                <li><h3>Bubonic Plague <em><span>&#40;Black Plague<span>&#41;</span></em></h3></li>
-                <img id="blackPlague_pic" src="../images/blackPlague.jpg" width="1200" height="350" alt="micro scale picture of black plague">
+            <div id ="bubonic-plague">
+                <h3>Bubonic Plague <em><span>&#40;Black Plague<span>&#41;</span></em></h3>
             </div>
+            <img id="blackPlague_pic" src="../images/blackPlague.jpg" width="100%" height="400" alt="micro scale picture of black plague">
+            
             <div id="disease-text">
                 <p>The <a href="https://www.history.com/topics/middle-ages/black-death#:~:text=The%20Black%20Death%20was%20a,the%20Sicilian%20port%20of%20Messina." target="_blank">
                     Black Plague[2]</a> was a devastating global epidemic of bubonic plague that struck Europe and Asia in the mid-1300s. The
@@ -76,7 +59,6 @@
                 the bilbo or popping it can still kill the victim from toxic shock, and the spray from the bubo is profoundly infectious
                 to those who come into contact with it.</p>
             </div>
-        </ul>
         <br>
         <img id="screenshot" src="../images/place-holder.jpg" alt ="Screenshot of simulator">
         <button id="btn">Go to Simulator<i id="btn-icon" class="gg-arrow-right-o"></i></button>
