--- a/css/homepageStyle.css
+++ b/css/homepageStyle.css
@@ -1,21 +1,18 @@
 body {
 	font-family: "Times New Roman", Times, serif;
 	overflow-x: hidden;
+	padding: 0px;
+	margin: 0px;
 }
-a,
-a {
-	text-decoration: none;
-}
-a.read-more {
+.special-link-format {
 	position: relative;
-	float: center;
 	font-family: 'Roboto', sans-serif;
 	font-size: 11px;
 	text-transform: uppercase;
 	letter-spacing: 1.5px;
 	background-color: #1f2020;
 	border: 1px solid #333333;
-	border-radius: 3px 3px 3px 3px;
+	border-radius: 3px;
 	color: #f5f5f5;
 	padding: 5px;
 	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
@@ -23,24 +20,28 @@ a.read-more {
 	cursor: pointer;
 	outline: none;
 }
-a.read-more:hover {
+.special-link-format:hover {
 	background-color: #313333;
-	border-radius: 3px 3px 3px 3px;
+	border-radius: 3px;
 	text-decoration: none;
 	box-shadow: 0px 15px 20px rgba(107, 104, 104, 0.4);
 	color: #fff;
 	transform: translateY(-7px);
 }
-a:hover {
-	color: grey;
-	text-decoration: underline;
+a {
+	text-decoration: none;
+}
+a.read-more {
+	float: center;
 }
 p a {
 	color: rgba(66, 73, 73, 0.6);
 }
-
+p a:hover {
+	color: grey;
+	text-decoration: underline;
+}
 #banner {
-	background-color: rgb(19, 19, 19);
 	color: white;
 	width: 100%;
 	height: 160px;
@@ -56,6 +57,9 @@ p a {
 	#banner {
 		background-size: 1500px 300%;
 	}
+	.wide-image {
+		width: 1500px;
+	}
 }
 #title {
 	font-size: 60px;
@@ -66,79 +70,35 @@ p a {
 	font-size: 18px;
 	color: lightgrey;
 }
-.shortcut {
-	border-radius: 10px;
-	background-color: rgb(19, 19, 19);
-	color: lightgrey;
-	padding: 7px;
-	padding-right: 10px;
-	right: 10px;
-	display: block;
-	font-size: 18px;
+.shortcut-text {
+	position: relative;
+	top: 6px;
 }
 .shortcut-icon {
-	display: block;
 	float: right;
 	position: relative;
-	left: 5px;
+	left: 3px;
+	bottom: 10px;
 }
 #simulator-shortcut {
 	position: fixed;
-	font-family: 'Roboto', sans-serif;
-	font-size: 11px;
-	text-transform: uppercase;
-	letter-spacing: 1.5px;
-	background-color: #1f2020;
-	border: 1px solid #333333;
-	border-radius: 3px 3px 3px 3px;
-	color: #f5f5f5;
-	padding: 5px;
-	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-	transition: all 0.3s ease 0s;
-	cursor: pointer;
-	outline: none;
-}
-#simulator-shortcut:hover {
-	background-color: #313333;
-	border-radius: 3px 3px 3px 3px;
-	text-decoration: none;
-	box-shadow: 0px 15px 20px rgba(107, 104, 104, 0.4);
-	color: #fff;
-	transform: translateY(-7px);
+	width: 100px;
+	height: 25px;
+	right: 0px;
 }
 #top-shortcut {
-	position: relative;
 	float: right;
-	top: 37px;
-	font-family: 'Roboto', sans-serif;
-	font-size: 11px;
-	text-transform: uppercase;
-	letter-spacing: 1.5px;
-	background-color: #1f2020;
-	border: 1px solid #333333;
-	border-radius: 3px 3px 3px 3px;
-	color: #f5f5f5;
-	padding: 5px;
-	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-	transition: all 0.3s ease 0s;
-	cursor: pointer;
-	outline: none;
-}
-#top-shortcut:hover {
-	background-color: #313333;
-	border-radius: 3px 3px 3px 3px;
-	text-decoration: none;
-	box-shadow: 0px 15px 20px rgba(107, 104, 104, 0.4);
-	color: #fff;
-	transform: translateY(-7px);
+	top: 35px;
+	width: 50px;
+	height: 25px;
 }
 #disease-header {
 	text-align: center;
 	font-family: 'Bitter', serif;
 	line-height: 54px;
-	margin: 0 0 54px;
+	margin-top: 60px;
 	color: rgba(0, 0, 0, 0.95);
-	font-size: 36px;
+	font-size: 32px;
 	font-weight: normal;
 }
 .covid {
@@ -189,45 +149,26 @@ p a {
 	margin-left: auto;
 	margin-right: auto;
 	width: 50%;
-	padding-top: 40px;
+	padding-top: 55px;
 }
 #btn {
 	display: block;
+	width: 175px;
+	height: 40px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 10px;
-	line-height: 15px;
-	font-size: 18px;
-	padding: 8px;
-	padding-top: 2px;
-	padding-bottom: 12px;
-	font-family: 'Roboto', sans-serif;
-	font-size: 11px;
-	text-transform: uppercase;
-	letter-spacing: 1.5px;
-	background-color: #1f2020;
-	border: 1px solid #333333;
-	border-radius: 3px 3px 3px 3px;
-	color: #f5f5f5;
-	padding: 5px;
-	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-	transition: all 0.3s ease 0s;
-	cursor: pointer;
-	outline: none;
-}
-#btn:hover {
-	background-color: #313333;
-	border-radius: 3px 3px 3px 3px;
-	text-decoration: none;
-	box-shadow: 0px 15px 20px rgba(107, 104, 104, 0.4);
-	color: #fff;
-	transform: translateY(-7px);
 }
 #btn-icon {
 	display: inline-block;
 	position: relative;
-	top: 5px;
-	left: 5px;
+	top: 1px;
+	left: 3px;
+}
+#btn-text {
+	display: inline-block;
+	position: relative;
+	bottom: 5px;
 }
 #footer-banner {
 	background-color: rgb(19, 19, 19);
