--- a/views/htmlTable.html
+++ b/views/htmlTable.html
@@ -91,8 +91,10 @@ By default, table headings are bold and centered. A table data/cell is defined w
   /*var table = "<table class=graph><tr class=row><td class=col></td><td class=col></td></tr>"; //this works
   table += "<tr class=row><td class=col></td><td class = col></td></tr></table>";
   */
+  import {State, Neighborhood} from '../scripts/outbreak.js';
   var table = "<table Id = graph>";//represents a html table
 
+  neighbor = new Neighborhood[260][260];//creating a 2d array of neighborhoods
   //generating tha table graph  
   for(i = 0; i < 260; i++)
   {
@@ -109,6 +111,7 @@ By default, table headings are bold and centered. A table data/cell is defined w
   var x = document.getElementsByTagName("td");//getting all the columns in the table
   var infection = Math.floor(Math.random()*260);
   console.log(infection); 
+
   for(i=0; i < x.length; i++)
   {
     if(infection <10)
