working on injex.js

--- a/views/htmlTable.html
+++ b/views/htmlTable.html
@@ -3,7 +3,7 @@ By default, table headings are bold and centered. A table data/cell is defined w
 <!DOCTYPE html>
 <html>
     <head>
-      <script type="module" src="../scripts/outbreak.js"></script>
+      <!--<script type="module" src="../scripts/outbreak.js"></script> -->
         <style>
         #graph {
           border-collapse: collapse;
@@ -44,7 +44,7 @@ By default, table headings are bold and centered. A table data/cell is defined w
   //import {State, Neighborhood} from '../scripts/outbreak.js';
   var table = "<table Id = graph>";//represents a html table
 
-  let neighbor = new Neighborhood[260][260];//creating a 2d array of neighborhoods
+  //let neighbor = new Neighborhood[260][260];//creating a 2d array of neighborhoods
   
   //generating tha table graph  
   for(i = 0; i < 260; i++)
